Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17767

error: 'struct lsmcontext' has no member named 'slot'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • kernel 6.8.0-31-generic
    • 3
    • 9223372036854775807

    Description

      Building Lustre with kernel 6.8.0-31-generic failed as follows:

        CC [M]  /root/lustre-release/libcfs/libcfs/linux/linux-prim.o
      In file included from /root/lustre-release/libcfs/libcfs/linux/linux-prim.c:49:
      /root/lustre-release/lustre/include/lustre_compat.h: In function 'lsmcontext_init':
      /root/lustre-release/lustre/include/lustre_compat.h:760:11: error: 'struct lsmcontext' has no member named 'slot'
        760 |         cp->slot = slot;
            |           ^~
      

      https://git.launchpad.net/~ubuntu-kernel/ubuntu/+source/linux/+git/noble/commit/include/linux/security.h?h=Ubuntu-6.8.0-22.22&id=dad7cffb719e45fd43121ade4ada90ff376c9cad
      https://git.launchpad.net/~ubuntu-kernel/ubuntu/+source/linux/+git/noble/commit/?h=Ubuntu-6.8.0-22.22&id=43eb0e1c42dc483a55470177776b4ebaf9f82121

      Attachments

        Activity

          People

            sebastien Sebastien Buisson
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: